--- a/pages/issues.html
+++ b/pages/issues.html
@@ -312,6 +312,19 @@ Resumo:
         </div>
       </div>
     </section>
+    <!-- PRÓXIMO PASSO -->
+    <section class="section">
+      <h2>Próximo passo</h2>
+      <p class="subtitle">
+        Quando o repositório já estiver organizado, o passo seguinte é trabalhar com segurança:
+        <strong>branches</strong> para alterações e <strong>Pull Requests</strong> para integrar mudanças.
+      </p>
+
+      <div style="display:flex; gap:10px; flex-wrap:wrap">
+        <a class="btn primary" href="pages.html" style="text-decoration:none">Ir para “GitHub Pages”</a>
+        <a class="btn" href="../index.html" style="text-decoration:none">Voltar ao início</a>
+      </div>
+    </section>
 
     <div class="footer">© 2025 José Carlos Alves. Todos os direitos reservados.</div>
   </main>
