Atualização páginas html

--- a/pages/downloads.html
+++ b/pages/downloads.html
@@ -67,12 +67,14 @@
       </div>
 
       <!-- IMAGEM DE CABEÇALHO (placeholder) -->
-      <div class="prints" style="margin-top:14px">
-        <div class="ph">
-          <small>Imagem (opcional) para esta página — coloca em <code>images/</code></small>
-          <img src="../images/downloads_hero.png" alt="Imagem de capa da secção Downloads (substituir)">
+
+      <div class="prints" style="margin-top:14px; display:flex; justify-content:center">
+        <div class="ph" style="max-width: 980px; width:100%">
+              <img src="../images/downloads_hero.png" alt="Imagem de capa da secção Downloads (substituir)">
         </div>
       </div>
+
+      
     </header>
 
     <!-- PORQUÊ / QUANDO USAR -->
