--- a/pages/issues.html
+++ b/pages/issues.html
@@ -70,12 +70,11 @@
       </div>
 
       <!-- IMAGEM DE CABEÇALHO -->
-      <div class="prints" style="margin-top:14px">
-        <div class="ph">
-          <small>Imagem de capa da secção Issues</small>
-          <img src="../images/issues_hero.png" alt="Capa da secção Issues">
+      <div class="prints" style="margin-top:14px; display:flex; justify-content:center">
+        <div class="ph" style="max-width: 980px; width:100%">
+        <img src="../images/issues_hero.png" alt="Capa da secção Issues">  
         </div>
-      </div>
+      </div>      
     </header>
 
     <!-- PORQUÊ USAR ISSUES -->
@@ -312,20 +311,20 @@ Resumo:
         </div>
       </div>
     </section>
+
     <!-- PRÓXIMO PASSO -->
     <section class="section">
-      <h2>Próximo passo</h2>
-      <p class="subtitle">
-        Quando o repositório já estiver organizado, o passo seguinte é trabalhar com segurança:
-        <strong>branches</strong> para alterações e <strong>Pull Requests</strong> para integrar mudanças.
-      </p>
+    <h2>Próximo passo</h2>
+    <p class="subtitle">
+        Depois de organizares o trabalho com <strong>Issues</strong> (tarefas, evidências e progresso),
+        o passo seguinte é publicar o teu projeto online usando o <strong>GitHub Pages</strong>.
+    </p>
 
-      <div style="display:flex; gap:10px; flex-wrap:wrap">
+    <div style="display:flex; gap:10px; flex-wrap:wrap">
         <a class="btn primary" href="pages.html" style="text-decoration:none">Ir para “GitHub Pages”</a>
         <a class="btn" href="../index.html" style="text-decoration:none">Voltar ao início</a>
-      </div>
+    </div>
     </section>
-
     <div class="footer">© 2025 José Carlos Alves. Todos os direitos reservados.</div>
   </main>
 
