Atualização da imagem

--- a/pages/pages.html
+++ b/pages/pages.html
@@ -66,13 +66,11 @@
         <span class="tag">🔗 Link</span>
       </div>
 
-      <!-- IMAGEM DE CABEÇALHO -->
-      <div class="prints" style="margin-top:14px">
-        <div class="ph">
-          <small>Imagem de capa (opcional) — coloca em <code>images/</code></small>
+      <div class="prints" style="margin-top:14px; display:flex; justify-content:center">
+        <div class="ph" style="max-width: 980px; width:100%">
           <img src="../images/pages_hero.png" alt="Imagem de capa da secção GitHub Pages">
         </div>
-      </div>
+      </div>     
     </header>
 
     <!-- ANTES DE COMEÇAR -->
@@ -305,20 +303,20 @@
       </div>
     </section>
 
-        <!-- PRÓXIMO PASSO -->
-    <section class="section">
-      <h2>Próximo passo</h2>
-      <p class="subtitle">
-        Quando o repositório já estiver organizado, o passo seguinte é trabalhar com segurança:
-        <strong>branches</strong> para alterações e <strong>Pull Requests</strong> para integrar mudanças.
-      </p>
+   <!-- PRÓXIMO PASSO -->
+<section class="section">
+  <h2>Próximo passo</h2>
+  <p class="subtitle">
+    Depois de publicares o site com <strong>GitHub Pages</strong>, o próximo passo é
+    descarregar ferramentas recomendadas e aprender como obter uma cópia do repositório
+    (ZIP ou GitHub Desktop).
+  </p>
 
-      <div style="display:flex; gap:10px; flex-wrap:wrap">
-        <a class="btn primary" href="downloads.html" style="text-decoration:none">Ir para Downloads & Links úteis”</a>
-        <a class="btn" href="../index.html" style="text-decoration:none">Voltar ao início</a>
-      </div>
-    </section>
-
+  <div style="display:flex; gap:10px; flex-wrap:wrap">
+    <a class="btn primary" href="downloads.html" style="text-decoration:none">Ir para “Downloads & Links úteis”</a>
+    <a class="btn" href="../index.html" style="text-decoration:none">Voltar ao início</a>
+  </div>
+</section>
 
 
     <div class="footer">© 2025 José Carlos Alves. Todos os direitos reservados.</div>
